--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,16 +70,16 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/logo.png"
+  image_path: "asset/images/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "images/logo.png"
+    image_path: "asset/images/logo.png"
     background_color: "#FFFFFF"
     theme_color: "#0000FF"
   windows:
     generate: true
-    image_path: "images/logo.png"
+    image_path: "asset/images/logo.png"
     icon_size: 48
 
 # The following section is specific to Flutter packages.
