--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.celebration_station_sturcture">
+    package="com.celebration.station">
    <application
-        android:label="celebration_station_sturcture"
+        android:label="Celebration Station"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
