--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,16 @@ dependencies:
   provider: ^6.0.5
   carousel_nullsafety: ^0.1.1
   url_launcher: ^6.1.7
+  change_app_package_name: ^1.1.0
+  razorpay_flutter: ^1.3.4
+  pin_code_text_field: ^1.8.0
+  bot_toast: ^4.0.1
+
+
+  #firebase
+  firebase_core: ^2.3.0
+  firebase_auth: ^4.1.4
+
 
 dev_dependencies:
   flutter_test:
