--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   razorpay_flutter: ^1.3.4
   pin_code_text_field: ^1.8.0
   bot_toast: ^4.0.1
+  carousel_slider: ^4.0.0
 
 
   #firebase
