--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   bot_toast: ^4.0.1
   carousel_slider: ^4.0.0
   getwidget: ^2.0.4
+  firebase_messaging: ^14.1.3
+  flutter_local_notifications: ^12.0.4
+  get_storage: ^2.0.3
 
 
   #firebase
